tests/116_if_non_bool_error.scj
// Test 116: if condition must be Bool
let x = 1
if (x) {
    println(1)
}
// ExpectError: If condition must be Bool
